Add new integration
