# apps/backend/src/modules/users/user.controller.ts
@@ -23,10 +23,10 @@ import {
 } from '~/clients/hotel-california/response';
 import { HotelCaliforniaService } from '../hotel-california/hotel-california.service';
 import {
-  ListClientsParams,
-  UpdateClientParams,
-  CreateClientParams,
-} from '../hotel-california/hotel-california.types';
+  CreateClientRequest,
+  ListClientsRequest,
+  UpdateClientRequest,
+} from '../hotel-california/requests/hotel-california.request';
 
 @ApiTags('users')
 @Controller('users')
@@ -49,7 +49,7 @@ export class UserController {
     type: PaginatedClientListResponse,
   })
   async getClients(
-    @Query() params?: ListClientsParams,
+    @Query() params?: ListClientsRequest,
   ): Promise<PaginatedClientListResponse> {
     const client = this.hotelService.getClient();
     return await client.listClients(params);
@@ -57,15 +57,18 @@ export class UserController {
 
   @Post()
   @ApiOperation({ summary: 'Créer un client' })
-  @ApiBody({ type: Object })
+  @ApiBody({ type: CreateClientRequest })
   @ApiOkResponse({
     description: 'Client created successfully',
     type: ClientResponse,
   })
   async createClient(
-    @Body() data: CreateClientParams,
+    @Body() data: CreateClientRequest,
   ): Promise<ClientResponse> {
     const client = this.hotelService.getClient();
+
+    console.log('data', data);
+
     return await client.createClient(data);
   }
 
@@ -93,7 +96,7 @@ export class UserController {
   })
   async updateClient(
     @Param('id') id: number,
-    @Body() data: UpdateClientParams,
+    @Body() data: UpdateClientRequest,
   ): Promise<ClientResponse> {
     const client = this.hotelService.getClient();
     return await client.updateClient(id, data);
